0.6.3/Player.md
## Player
These functions are for mainipulating player data.

### `ConvertItemNameToStat()`
---
 Returns: `undefined`

Converts the Item name into stats of the Item and automatically sets the stats of the player

### `__Player()` (*constructor*)

Player data

**Methods**
#### `.GetBaseStats()` Returns: `undefined`

Gets the base ATK and DEF of the player and then automatically sets it

#### `.GetLvBaseExp()` Returns: `undefined`

Gets the exp needed for the current lv

#### `.GetExpNext()` Returns: `undefined`

Gets the exp needed for the lext lv

#### `.Name([name])` Returns: `undefined`

Sets/Gets the name of the player

| Parameter | Datatype  | Purpose |
|-----------|-----------|---------|
|`name` |string |The name to set (If needed) |










#### `.LV([lv])` Returns: `undefined`

Sets/Gets the lv of the player

| Parameter | Datatype  | Purpose |
|-----------|-----------|---------|
|`lv` |real |The lv to set (If needed) |










#### `.Gold([gold])` Returns: `undefined`

Sets/Gets the current Gold the player has

| Parameter | Datatype  | Purpose |
|-----------|-----------|---------|
|`amount` |real |The amount of gold to set (If needed) |










#### `.Exp([exp])` Returns: `undefined`

Sets/Gets the current Exp the player has

| Parameter | Datatype  | Purpose |
|-----------|-----------|---------|
|`amount` |real |The amount of exp to set (If needed) |










#### `.Spd([spd])` Returns: `undefined`

Sets/Gets the speed of the player

| Parameter | Datatype  | Purpose |
|-----------|-----------|---------|
|`spd` |real |The speed to set (If needed) |










#### `.HP([hp])` Returns: `undefined`

Sets/Gets the hp of the player

| Parameter | Datatype  | Purpose |
|-----------|-----------|---------|
|`hp` |real |The HP to set (If needed) |










#### `.HPMax([max_hp])` Returns: `undefined`

Sets/Gets the max hp of the player

| Parameter | Datatype  | Purpose |
|-----------|-----------|---------|
|`maxhp` |real |The max HP to set (If needed) |










